--- a/app/views/travelfees/index.html.erb
+++ b/app/views/travelfees/index.html.erb
@@ -1,35 +1,29 @@
-<html>
 <h1>Listing travelfees</h1>
-
-
 
 <table>
   <tr>
     <th>Userid</th>
     <th>Classname</th>
     <th>Date</th>
-    <th>Travel fee</th>
+    <th>Travelfee</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-  <% @travelfees.each do |travelfee| %>
+
+<% @travelfees.each do |travelfee| %>
   <tr>
     <td><%= travelfee.userid %></td>
     <td><%= travelfee.classname %></td>
     <td><%= travelfee.date %></td>
-    <td><center><%= travelfee.travel_fee %></td></center>
+    <td><%= travelfee.travelfee %></td>
     <td><%= link_to 'Show', travelfee %></td>
     <td><%= link_to 'Edit', edit_travelfee_path(travelfee) %></td>
     <td><%= link_to 'Destroy', travelfee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
-
-
 </table>
 
 <br />
 
-<%= will_paginate @travelfees %>
-<%= link_to 'New Travel Fee', new_travelfee_path %>
-</html>
+<%= link_to 'New Travelfee', new_travelfee_path %>
