pht userfind,timetable,home,attendance

--- a/app/views/home/get.html.erb
+++ b/app/views/home/get.html.erb
@@ -1,9 +1,8 @@
+<%= link_to 'Timetable', new_timetable_path %>
+<%= link_to 'Attendance', new_attendance_path %>
+<%= link_to 'Travelfee', new_travelfee_path %>
+<%= link_to 'User', new_user_path %>
 
-<a href="/attendances/new">Attendance</a>
-<a href="/userinputs/new">Timetable</a>
-<a href="/travelfees/new">Travel Fee</a>
-<a href="/users/new">User</a>
-<br>
 <br>
 
 
