--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -1,5 +1,21 @@
 <h1>Listing attendances</h1>
 
+<%= form_tag attendances_path, :method => "get" do%>
+<table>
+ <tr>
+   <td>userid</td>
+   <td><%= select_tag :userid,options_for_select(@users.collect{|u| [u.userid,u.userid]}) %>
+  </td>
+   </tr>
+   <tr>
+     <td>Month</td>
+     <td><%= select_tag "month",options_for_select(%w[Jan Feb March April May June July August Sept Oct Nov Dec])%></td>
+   </tr>
+   </table>
+   <%= submit_tag :find %>
+   <% end %>
+
+   
 <table>
   <tr>
     <th>Userid</th>
@@ -25,5 +41,5 @@
 </table>
 
 <br />
-
+<%= will_paginate @attendances %>
 <%= link_to 'New Attendance', new_attendance_path %>
