--- a/app/views/home/get.html.erb
+++ b/app/views/home/get.html.erb
@@ -1,7 +1,4 @@
-<%= link_to 'Timetable', new_timetable_path %>
-<%= link_to 'Attendance', new_attendance_path %>
-<%= link_to 'Travelfee', new_travelfee_path %>
-<%= link_to 'User', new_user_path %>
+
 
 <br>
 
@@ -33,5 +30,5 @@
 
 <br />
 
-<%= link_to 'New Attendance', new_attendance_path %>
+<%= link_to 'See More', attendances_path %>
 
