--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if user_signed_in? %> 
+<%= link_to "Sign Out" ,destroy_user_session_path, :method => :delete %>
+<%= link_to 'Timetable', timetables_path %>
+<%= link_to 'Attendance', attendances_path %>
+<%= link_to 'Travelfee', travelfees_path %>
+<%= link_to 'User', users_path %>
+<%end%>
 <%= yield %>
 
 </body>
