--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :jplevel %><br />
-    <%= f.number_field :jplevel %>
+    <%= f.select :jplevel,options_for_select(%w[1 2 3 4 5])%>
   </div>
   <div class="field">
     <%= f.label :classname %><br />
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :school %><br />
-    <%= f.text_field :school %>
+    <%= f.select :school,options_for_select(%w[Win Momiji GIC]) %>
   </div>
   <div class="field">
     <%= f.label :starttime %><br />
