--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag users_path, :method => "get"  do%>
 <table>
   <tr>
-    <td>userid</td><td><%= text_field_tag :userid, params[:userid] %></td>
+    <td>userid</td><td><%= select_tag :userid, options_for_select(@users.collect{|u| [u.userid,u.userid]}) %></td>
   </tr>
   <tr>
     <td>name</td><td><%= text_field_tag :name, params[:name] %></td>
@@ -41,7 +41,11 @@
     <td><%= user.address %></td>
     <td><%= user.phone %></td>
     <td><%= user.normaltravelfee %></td>
-    <td><%= user.gender %></td>
+    <td><% if (user.gender == true)  %>
+    Female
+    <% else %>
+    Male
+    <% end %></td>    
     <td><%= user.team %></td>
     <td><%= user.NRCnumber %></td>
     <td><%= user.year_of_entry %></td>
